crates/toml_edit/tests/snapshots/invalid/integer/double-us.stderr
TOML parse error at line 1, column 15
  |
1 | double-us = 1__23
  |               ^
`_` may only go between digits
